--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "red-planner-front-end",
+  "name": "amo-planner-front-end",
   "version": "0.1.0",
   "private": true,
   "scripts": {
